# oss-embedded-innodb

./: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in  innodb.h  make-header
api/: api0api.c  api0cfg.c  api0misc.c  api0sql.c  api0status.c  api0ucode.c
btr/: btr0btr.c  btr0cur.c  btr0pcur.c  btr0sea.c
buf/: buf0buddy.c  buf0buf.c  buf0flu.c  buf0lru.c  buf0rea.c
data/: data0data.c
ddl/: ddl0ddl.c
dict/: dict0boot.c  dict0crea.c  dict0dict.c  dict0load.c  dict0mem.c
eval/: eval0eval.c
fil/: fil0fil.c
fsp/: fsp0fsp.c
fut/: fut0lst.c
ha/: ha0ha.c  ha0storage.c  hash0hash.c
ibuf/: ibuf0ibuf.c
include/: api0api.h  api0ucode.h  btr0btr.ic  btr0cur.h  btr0cur.ic  btr0pcur.ic  buf0buf.h  buf0buf.ic  buf0lru.h  data0type.ic  db0err.h  dict0dict.h  dict0dict.ic  fil0fil.h  hash0hash.h  ib0config.h  ibuf0ibuf.h  ibuf0ibuf.ic  log0recv.h  mem0mem.ic  mtr0mtr.ic  os0sync.ic  page0cur.ic  page0page.ic  rem0cmp.ic  rem0rec.ic  row0sel.h  row0upd.ic  srv0srv.h  sync0rw.h  sync0sync.h  trx0sys.ic  univ.i
lock/: lock0lock.c
log/: log0log.c  log0recv.c
mem/: mem0mem.c
mtr/: mtr0mtr.c
os/: os0file.c  os0proc.c  os0sync.c  os0thread.c
page/: page0cur.c  page0page.c  page0zip.c
pars/: pars0grm.c  pars0opt.c  pars0pars.c
que/: que0que.c
rem/: rem0cmp.c  rem0rec.c
row/: row0ext.c  row0ins.c  row0merge.c  row0purge.c  row0row.c  row0sel.c  row0uins.c  row0umod.c  row0undo.c  row0upd.c
srv/: srv0srv.c  srv0start.c
sync/: sync0arr.c  sync0rw.c  sync0sync.c
tests/: Makefile.am  Makefile.in  ib_cfg.c  ib_compressed.c  ib_cursor.c  ib_ddl.c  ib_dict.c  ib_drop.c  ib_index.c  ib_logger.c  ib_mt_base.c  ib_mt_drv.c  ib_mt_stress.c  ib_mt_t1.c  ib_mt_t2.c  ib_recover.c  ib_search.c  ib_shutdown.c  ib_status.c  ib_tablename.c  ib_test1.c  ib_test2.c  ib_test3.c  ib_test5.c  ib_types.c  ib_update.c  ib_zip.c  test0aux.c
thr/: thr0loc.c
trx/: trx0purge.c  trx0rec.c  trx0roll.c  trx0rseg.c  trx0sys.c  trx0trx.c  trx0undo.c
ut/: ut0mem.c  ut0ut.c
